fixed nav alignment, image resizing

--- a/scss/components/_nav.scss
+++ b/scss/components/_nav.scss
@@ -1,19 +1,21 @@
 /* NAVBAR */
 .Navbar {
-  padding: 0 5px;
-  padding-top: 1rem;
+  margin: 1.6rem 0;
+  padding: 0 10px;
   display: flex;
   align-items: center;
   flex-direction: row;
-  justify-content: space-evenly;
-  margin-bottom: 10px;
+  justify-content: space-between;
+
+  @include media(">tablet") {
+    justify-content: space-evenly;
+  }
 }
 
-.Nav__invitebtn{
+.Nav__invitebtn {
   display: none;
   transition: 0.4s ease-in-out;
 }
-
 
 .Navbar__logo {
   z-index: 8;
@@ -50,7 +52,7 @@
   transition: 0.4s ease-in-out;
 }
 
-.Navbar__items{
+.Navbar__items {
   display: flex;
   gap: 1.6rem;
   flex-direction: column;
@@ -83,17 +85,14 @@
   transform: rotate(45deg) translate(2px, -10px);
 }
 
-
-
-
-.line{
+.line {
   width: 20rem;
   height: 1px;
   background-color: $black;
   margin: 1rem 0;
 }
 
-@include media(">phone") {
+@include media(">tablet") {
   .Nav__invitebtn {
     display: flex;
     align-items: center;
@@ -103,22 +102,20 @@
     margin-top: -5px;
   }
 
-  .Navbar__items{
+  .Navbar__items {
     display: flex;
     flex-direction: row;
     gap: 1rem;
-
   }
 
-  .line, .Navbar__link-toggle{
+  .line,
+  .Navbar__link-toggle {
     display: none;
   }
 }
 
 @include media(">desktop") {
- .Navbar__items{
-margin-left: -15%;
+  .Navbar__items {
+    margin-left: -15%;
   }
-
- 
 }
